# atg-rs

./: .gitignore  Cargo.toml  README.md
.github/actions/linux-deps/: action.yml
.github/actions/reject-merge-commits/: action.yml
.github/workflows/: ci.yml
doc/: GameDesign.md  GameSummary.md  OpenAIInput.md  car.md  math.md  renderer.md
engine/: Cargo.toml
engine/src/: error.rs  lib.rs
engine/src/core/: camera.rs  car.rs  clock.rs  component.rs  constrainer.rs  game_input.rs  game_loop.rs  game_object.rs  gl_font.rs  gl_graphics.rs  gl_pipeline.rs  gl_pipeline_colored.rs  gl_pipeline_msdftex.rs  gl_renderer.rs  gl_text.rs  gl_texture.rs  input.rs  mod.rs  player.rs  sphere.rs  terrain.rs  wheel.rs  world.rs
engine/src/gfx/: color_conversion.rs  color_format.rs  mod.rs  png_read.rs
engine/src/sys/: opengl.rs
engine/src/sys/linux/: mod.rs
engine/src/sys/win32/: mod.rs  window.rs
engine/src/util/: ik_solvers.rs  inflate.rs  logger.rs  mod.rs  obj_pool.rs
engine/src/v2d/: affine2x2.rs  affine3x3.rs  affine4x4.rs  float_eq.rs  m2x2.rs  m3x3.rs  m4x4.rs  mod.rs  q.rs  r2.rs  v2.rs  v3.rs  v4.rs
engine/src/x2d/: circle.rs  collide.rs  manifold.rs  mass.rs  mod.rs  physics.rs  polygon.rs  rigid_body.rs  world.rs
engine/src/x2d/constraint/: contact.rs  distance_joint.rs  joint.rs  mod.rs  slider.rs  slider_joint.rs  softness.rs  spring_joint.rs  tire_contact.rs  wheel_joint.rs
game/: Cargo.toml  build.rs  game.rc
game/res/: game.exe.manifest
game/src/: game.rs  main.rs
game/src/gameplay/: world.rs
scripts/: heightmap_geodata.py
