[workspace]
members = ["engine", "game"]
default-members = ["engine"]
resolver = "2"

[workspace.dependencies]
miniwebp = { git = "https://github.com/steschu77/miniwebp-rs.git" }
miniz = { git = "https://github.com/steschu77/miniz-rs.git" }
log = "0.4"
serde = "1.0"
serde_json = "1.0"
windows = "0.59"
x11 = "2.21"
