[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_System", "Win32_System_IO", "Win32_System_LibraryLoader", "Win32_System_Threading",
    "Win32_Devices", "Win32_Devices_HumanInterfaceDevice",
    "Win32_Graphics", "Win32_Graphics_Gdi", "Win32_Graphics_OpenGL",
    "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"
] }

[target.'cfg(unix)'.dependencies]
x11 = { workspace = true, features = ["xlib", "glx"] }