[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = { path = "../engine" }
log = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = ["Win32_System", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_Graphics", "Win32_Graphics_Gdi", "Win32_Graphics_OpenGL", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(unix)'.dependencies]
x11 = { workspace = true, features = ["xlib", "glx"] }

[build-dependencies]
embed-resource = "3.0"
static_vcruntime = "3.0"

[lints.clippy]
collapsible_if = "allow"
upper_case_acronyms = "allow"
